# cubegame

./: .gitignore  config.example.js  game.js  index.html  package.json  server.js  style.css  tmpclaude-9836-cwd
solana-program/: Anchor.toml
solana-program/programs/cube_game/: Cargo.toml
solana-program/programs/cube_game/src/: lib.rs
