[package]
name = "cube_game"
version = "0.1.0"
description = "Solana program for Cube Clicker game"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cube_game"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
